deploy (k8s): add helm deployment